--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -1,28 +1,22 @@
 <!DOCTYPE html>
 <html>
   <head>
-  	<title>Bookers2</title>
+  	<title>Handrogram</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
-
   <body>
 	<div class="row">
 		<div class="main col-md-offset-3 col-md-6">
-			<h1>welcome to<span class="glyphicon glyphicon-book"></span>
-		    <strong>Bookers</strong>  !!</h1>
-			<p>In <span class="glyphicon glyphicon-book"></span><strong>Bookers</strong>,</p>
-			<p>you can share and exchange your opinions , inpressions , and emotions</p>
-			<p>about varioius books!</p>
-
 			<div class="btn-wrapper">
 				<div class="row">
-					<p><%=link_to "Log in", new_user_session_path, class: "btn btn-info col-xs-10 col-xs-offset-1" %></p>
+					<p><%=link_to "会員の方はこちら", new_user_session_path, class: "btn btn-info col-xs-10 col-xs-offset-1" %></p>
 				</div>
+				<div class="row"></div>
 				<div class="row">
-					<p><%=link_to "Sign up", new_user_registration_path, class: "btn btn-success col-xs-10 col-xs-offset-1" %></p>
+					<p><%=link_to "新規登録の方はこちら", new_user_registration_path, class: "btn btn-success col-xs-10 col-xs-offset-1" %></p>
 				</div>
 			</div>
 		</div>
