--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,15 +19,16 @@
         <nav>
           <ul class="nav navbar-nav navbar-right">
             <% if user_signed_in? %>
-              <li><%= link_to ' home', user_path(current_user) %></li>
-              <li><%= link_to ' users', users_path %></li>
-              <li><%= link_to ' posts', posts_path %></li>
-              <li><%= link_to ' logout', destroy_user_session_path, method: :delete, class: 'glyphicon glyphicon-log-out logout' %></li>
+              <li><%= link_to ' 自分の投稿を見る', user_path(current_user) %></li>
+              <li><%= link_to ' 友達を見つける', users_path %></li>
+              <li><%= link_to ' 作品を探しに行く', posts_path %></li>
+              <li><%= link_to ' 新規投稿', new_post_path %></li>
+              <li><%= link_to ' このサイトを出る(ログアウト)', destroy_user_session_path, method: :delete %></li>
             <% else %>
-              <li><%= link_to ' home', root_path %></li>
-              <li><%= link_to ' about', home_about_path %></li>
-              <li><%= link_to ' sign up', new_user_registration_path %></li>
-              <li><%= link_to ' login', new_user_session_path %></li>
+              <li><%= link_to ' ホーム', root_path %></li>
+              <li><%= link_to ' このサイトについて', home_about_path %></li>
+              <li><%= link_to ' 新規登録', new_user_registration_path %></li>
+              <li><%= link_to ' ログイン', new_user_session_path %></li>
             <% end %>
           </ul>
         </nav>
@@ -48,7 +49,7 @@
       <div class="container">
         <div class="row">
           <div class="col-xs-3 col-xs-offset-9">
-            <p>CopyRight Infratop.inc</p>
+            <p></p>
           </div>
         </div>
       </div>
