--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,52 @@
 <div class="row">
 <h2>Users</h2>
 <!--users一覧 -->
+<% if @user == current_user %>
+<table class="table">
+	<tr><%= attachment_image_tag @user, :profile_image, format: 'jpeg', size: "100x100",  class: "pull-left profile-img",fallback: "no_image.jpg" %></tr>
+
+	<tr>
+		<th>name</th>
+		<th><%= @user.name %></th>
+	</tr>
+
+	<tr>
+		<th>introduction</th>
+		<th><%= @user.introduction %></th>
+	</tr>
+	<tr>
+		<th>follow</th>
+		<th><%= @user.followings.count %></th>
+	</tr>
+	<tr>
+		<th>follower</th>
+		<th><%= @user.followers.count %></th>
+	</tr>
+	<tr>
+		<th>
+			<% unless current_user == @user %>
+				<% if current_user.following?(@user) %>
+					<%= form_with url: relationships_path, method: :delete do %>
+					<%= hidden_field_tag :follow_id, @user.id %>
+					<%= submit_tag 'フォローを外す' %>
+					<% end %>
+				<% else %>
+					<%= form_with url: relationships_path do %>
+					<%= hidden_field_tag :follow_id, @user.id %>
+					<%= submit_tag 'フォローする' %>
+					<% end %>
+				<% end %>
+			<% end %>
+		</th>
+	</tr>
+</table>
+<% end %>
+<% if @user == current_user %>
+	<div class="row">
+		<%= link_to ' プロフィール編集', edit_user_path(@user), class: "col-xs-3 btn btn-default glyphicon glyphicon-wrench" %>
+	</div>
+<% end %>
+
 <table class="table">
 	<thead>
 		<tr>
@@ -14,10 +60,28 @@
 		<% @users.each do |user| %>
 			<tr>
 				<td>
+					<%= attachment_image_tag @user, :profile_image, format: 'jpeg', size: "50x50",  class: "pull-left profile-img",fallback: "no_image.jpg" %>
+				</td>
+				<td>
 					<%= user.name %>
 				</td>
 				<td>
 					<%= link_to "Show", user_path(user), class: "user_#{user.id}" %>
+				</td>
+				<td>
+					<% unless current_user == user %>
+					  <% if current_user.following?(user) %>
+					    <%= form_for(current_user.relationships.find_by(follow_id: user.id), html: { method: :delete }) do |f| %>
+					      <%= hidden_field_tag :follow_id, user.id %>
+					      <%= f.submit 'Unfollow', class: 'btn btn-danger btn-block' %>
+					    <% end %>
+					  <% else %>
+					    <%= form_for(current_user.relationships.build) do |f| %>
+					      <%= hidden_field_tag :follow_id, user.id %>
+					      <%= f.submit 'Follow', class: 'btn btn-primary btn-block' %>
+					    <% end %>
+					  <% end %>
+					<% end %>
 				</td>
 			</tr>
 		<% end %>
