--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -19,7 +19,7 @@
 						<% end %>
 					</td>
 					<td><%= link_to post.title, post_path(post), class: "post_#{post.id}" %></td>
-					<td><%= post.body %></td>
+					<td><%= post.introduction %></td>
 				</tr>
 				<% end %>
 			</tbody>
