--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -16,11 +16,11 @@
 	</tr>
 	<tr>
 		<th>follow</th>
-		<th><%= @user.followings.count %></th>
+		<th><%= @user.follow.count %></th>
 	</tr>
 	<tr>
 		<th>follower</th>
-		<th><%= @user.followers.count %></th>
+		<th><%= @user.follower.count %></th>
 	</tr>
 	<tr>
 		<th>
