--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,37 +1,57 @@
-<h2>User info</h2>
+<body  style="text-align: center;">
+<div class="body" style="text-align: center;">
+<h2>ユーザー編集</h2>
 
-<%= form_for(@user) do |f| %>
+	<%= form_for(@user) do |f| %>
+		<!-- エラーメッセージ表示-->
+		<% if @user.errors.any? %>
+			<div id="error_explanation">
+				<h3><%= @user.errors.count %>error prohibited this obj from being saved:</h3><
+				<ul>
+					<% @user.errors.full_messages.each do |message| %>
+					<li><%= message %></li>
+					<% end %>
+				</ul>
+			</div>
+		<% end %>
 
-	<!-- エラーメッセージ表示-->
-	<% if @user.errors.any? %>
-		<div id="error_explanation">
-			<h3><%= @user.errors.count %>error prohibited this obj from being saved:</h3><
-			<ul>
-				<% @user.errors.full_messages.each do |message| %>
-				<li><%= message %></li>
-				<% end %>
-			</ul>
+		<div class="field" style="text-align: center;">
+			<%= f.label :名前 %><br />
+			<%= f.text_field :name, class: "name" %>
 		</div>
+
+		<div class="field" style="text-align: center;">
+			<%= f.label :写真 %><br />
+			<%= attachment_image_tag @user, :profile_image, fallback: "no-image.png", id: "img_prev" %>
+			<%= f.attachment_field :profile_image, class: "user_image" %>
+		</div>
+
+		<div class="field" style="text-align: center;">
+			<%= f.label :一言 %><br />
+			<%= f.text_area :introduction, class: "introduction" %>
+		</div>
+
+		<div class="actions" style="text-align: center;">
+			<%= f.submit "更新する", class: "btn btn-primary col-xs-2" %>
+		</div>
+
 	<% end %>
-	<!-- エラーメッセージ表示-->
 
-	<div class="field">
-		<%= f.label :name %>
-		<%= f.text_field :name, class: "name" %>
-	</div>
-
-	<div class="field">
-		<%= f.label :image %>
-		<%= f.attachment_field :profile_image, class: "user_image" %>
-	</div>
-
-	<div class="field">
-		<%= f.label :introduction %>
-		<%= f.text_area :introduction, class: "introduction" %>
-	</div>
-
-	<div class="actions">
-		<%= f.submit %>
-	</div>
-
-<% end %>
+	<script>
+		$(document).on("turbolinks:load", function(){
+		  function readURL(input) {
+		    if(input.files && input.files[0]){
+		      var reader = new FileReader();
+		      reader.onload = function (e) {
+		        $('#img_prev').attr('src', e.target.result);
+		      }
+		      reader.readAsDataURL(input.files[0]);
+		    }
+		  }
+		  $("#user_profile_image").change(function(){
+		    readURL(this);
+		  });
+		});
+	</script>
+</div>
+</body>
