--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,22 +1,17 @@
-<body>
-<div class="row">
-	<h1>Handrogramとは</h1>
-	<p>このサイトはハンドメイド好きがハンドメイド作品を自慢したり、他の人の作品を見に行ったりすることが出来るサイトです。</p>
-
-	<h2>さぁ、素敵な作品を探しに行きましょう！</h2>
-
-		<div class="row">
+<div class="body" style="text-align: center;">
+	<div class="row">
+	<h2>Handrogramとは</h2>
+	<p>このサイトはハンドメイド好きがハンドメイド作品を自慢したり<br>他の人の作品を見に行ったりすることが出来るサイトです。</p>
+	<h4>さぁ、素敵な作品を探しに行きましょう！</h4>
+	</div>
+	<div class="row">
 		<div class="main col-md-offset-3 col-md-6">
 			<div class="btn-wrapper">
-				<div class="row">
-					<p><%=link_to "会員の方はこちら", new_user_session_path, class: "btn btn-info col-xs-10 col-xs-offset-1" %></p>
-				</div>
-				<div class="row"></div>
-				<div class="row">
-					<p><%=link_to "新規登録の方はこちら", new_user_registration_path, class: "btn btn-success col-xs-10 col-xs-offset-1" %></p>
+				<div class="field">
+					<span><%=link_to "会員の方はこちら", new_user_session_path, class: "btn btn-warning col-xs-5 col-xs-offset-1" %></span>
+					<span><%=link_to "新規登録の方はこちら", new_user_registration_path, class: "btn btn-warning col-xs-5 col-xs-offset-1" %></spam>
 				</div>
 			</div>
 		</div>
 	</div>
 </div>
-</body>
