--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -7,19 +7,20 @@
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
-  <body>
-	<div class="row">
+  <div class="body" style="text-align: center;">
 		<div class="main col-md-offset-3 col-md-6">
 			<div class="btn-wrapper">
-				<div class="row">
-					<p><%=link_to "会員の方はこちら", new_user_session_path, class: "btn btn-info col-xs-10 col-xs-offset-1" %></p>
+				<div class="field">
+					<img src="/assets/rogo_top.png" alt="トップロゴ">
 				</div>
-				<div class="row"></div>
-				<div class="row">
-					<p><%=link_to "新規登録の方はこちら", new_user_registration_path, class: "btn btn-success col-xs-10 col-xs-offset-1" %></p>
+				<div class="field">
+					<p></p>
+				</div>
+				<div class="field">
+					<span><%=link_to "会員の方はこちら", new_user_session_path, class: "btn btn-warning col-xs-5 col-xs-offset-1" %></span>
+					<span><%=link_to "新規登録の方はこちら", new_user_registration_path, class: "btn btn-warning col-xs-5 col-xs-offset-1" %></spam>
 				</div>
 			</div>
 		</div>
-	</div>
-  </body>
+  </div>
 </html>
