--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,11 +10,17 @@
   </head>
 
   <body>
-    <header class="navbar navbar-fixed-top navbar-inverse">
+    <header class="navbar navbar-fixed-top navbar-inverse" style="background-color:#593e0d;">
       <div class="container">
 
         <nav class="nav navbar-nav navbar-left">
-          <span>Handrogram</span>
+          <% if user_signed_in? %>
+          <li><%= link_to '', posts_path %>
+            <img src="/assets/rogo_header.png" alt="ヘッダーロゴ"></li>
+          <% else %>
+          <li><%= link_to '', root_path %>
+            <img src="/assets/rogo_header.png" alt="ヘッダーロゴ"></li>
+          <% end %>
         </nav>
         <nav>
           <ul class="nav navbar-nav navbar-right">
@@ -32,18 +38,16 @@
             <% end %>
           </ul>
         </nav>
-
       </div>
     </header>
     <main>
-      <div class = "container">
-          <% flash.each do |key, value| %> 
-           <%= content_tag(:div, value, class: "#{key}") %> 
-          <% end %> 
-        <div class= "row">
+      <body>
+        <div class="container" >
+        <% flash.each do |key, value| %> 
+          <%= content_tag(:div, value, class: "#{key}") %> 
+        <% end %> 
         <%= yield %>
-        </div>
-      </div>
+      </body>
     </main>
     <footer>
       <div class="container">
