--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,40 +1,42 @@
-<% if @post.errors.any? %>
-  <div class="alert alert-warning">
-    <ul>
-      <%= @post.errors.count %>errors
-      <% @post.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-    </ul>
-  </div>
-<% end %>
-<div class="row">
-		<h2>Posts index</h2>
-		<% @all_ranks.each do |post| %>
-		<%= link_to post.title, post_path(post), class: "post_#{post.id}" %>
+<body style="text-align: center;">
+		<% if @post.errors.any? %>
+			  <div class="alert alert-warning">
+			    <ul>
+			      <%= @post.errors.count %>errors
+			      <% @post.errors.full_messages.each do |message| %>
+			        <li><%= message %></li>
+			      <% end %>
+			    </ul>
+			  </div>
 		<% end %>
-		<table class="table table-hover table-inverse">
-			<thead>
-				<tr>
-					<th></th>
-					<th>Title</th>
-					<th>Opinion</th>
-					<th colspan="3"></th>
-				</tr>
-			</thead>
-			<tbody>
-				<% @posts.each do |post| %>
-				<tr>
-					<td>
-						<%= link_to user_path(post.user) do %>
-							<%= attachment_image_tag @user, :profile_image, format: 'jpeg', size: "50x50",  class: "pull-left profile-img", fallback: "no_image.jpg" %>
-						<% end %>
-						</td>
-						<td><%= link_to post.title, post_path(post), class: "post_#{post.id}" %></td>
-						<td><%= post.introduction %></td>
-				</tr>
-			　<% end %>
-			</tbody>
-		</table>
-	</div>
-</div>
+		<div class="row">
+			<h2>みんなの投稿</h2>
+			<h3>注目の投稿</h3>
+			<table class="table table-hover table-inverse">
+				<% @all_ranks.each do |post| %>
+					<div class="col-md-3">
+		      			<div class="card">
+		      				<p><%= attachment_image_tag post, :image, format: 'jpeg', size: "180x180", class: "pull-center post-img", class: "card-img-top", fallback: "no-image.png" %></p>
+							<h4><%= link_to post.title, post_path(post), class: "post_#{post.id}" %></h4>
+							<li>いいね数: <%= post.likes.count %></li>
+							<li>コメント数: <%= post.post_comments.count %></li>
+						</div>
+					</div>
+					<% end %>
+			</table>
+			<table class="table table-hover table-inverse">
+				<h3>新着投稿</h3>
+					<% @posts.each do |post| %>
+						<div class="col-md-3">
+		      				<div class="card">
+		      					<p><%= attachment_image_tag post, :image, format: 'jpeg', size: "180x180", class: "pull-center post-img", class: "card-img-top", fallback: "no-image.png" %></p>
+								<h4><%= link_to post.title, post_path(post), class: "post_#{post.id}" %></h4>
+								<li>いいね数: <%= post.likes.count %></li>
+								<li>コメント数: <%= post.post_comments.count %></li>
+							</div>
+						</div>
+					<% end %>
+			</table>
+		</div>
+</body>
+
