--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,28 +1,16 @@
 <body>
-<div class="row">
-		<h2>Posts</h2>
-		<table class="table table-hover table-inverse">
-			<thead>
-				<tr>
-					<th></th>
-					<th>Title</th>
-					<th>Opinion</th>
-					<th colspan="3"></th>
-				</tr>
-			</thead>
-			<tbody>
-				<% @posts.each do |post| %>
-				<tr>
-					<td>
-						<%= link_to user_path(post.user) do %>
-							<%= attachment_image_tag @user, :profile_image, format: 'jpeg', size: "50x50",  class: "pull-left profile-img", fallback: "no_image.jpg" %>
-						<% end %>
-					</td>
-					<td><%= link_to post.title, post_path(post), class: "post_#{post.id}" %></td>
-					<td><%= post.introduction %></td>
-				</tr>
-				<% end %>
-			</tbody>
-		</table>
+<div class="body" style="text-align: center;">
+	<h2><%= @user.name %>さんの投稿</h2>
+		<% @posts.each do |post| %>
+			<div class="col-md-3">
+      			<div class="card">
+					<p><%= attachment_image_tag post, :image, format: 'jpeg', size: "180x180", class: "pull-center post-img", class: "card-img-top", fallback: "no-image.png" %><p>
+					<h4><%= link_to post.title, post_path(post), class: "post_#{post.id}" %></h4>
+					<li>いいね数: <%= post.likes.count %></li>
+					<li>コメント数: <%= post.post_comments.count %></li>
+				</div>
+    		</div>
+		<% end %>
 </div>
 </body>
+
