--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,7 +1,7 @@
 <div class="body" style="text-align: center;">
 	<div class="row">
-	<h2>Handrogramとは</h2>
-	<p>このサイトはハンドメイド好きがハンドメイド作品を自慢したり<br>他の人の作品を見に行ったりすることが出来るサイトです。</p>
+	<h3><img src="/assets/rogo_header2.png" alt="ヘッダーロゴ">とは</h3><br><br><br><br>
+	<p>このサイトはハンドメイド好きがハンドメイド作品を自慢したり<br>他の人の作品を見に行ったりすることが出来るサイトです。</p><br><br><br><br>
 	<h4>さぁ、素敵な作品を探しに行きましょう！</h4>
 	</div>
 	<div class="row">
@@ -9,7 +9,7 @@
 			<div class="btn-wrapper">
 				<div class="field">
 					<span><%=link_to "会員の方はこちら", new_user_session_path, class: "btn btn-warning col-xs-5 col-xs-offset-1" %></span>
-					<span><%=link_to "新規登録の方はこちら", new_user_registration_path, class: "btn btn-warning col-xs-5 col-xs-offset-1" %></spam>
+					<span><%=link_to "新規登録の方はこちら", new_user_registration_path, class: "btn btn-warning col-xs-5 col-xs-offset-1" %></span><br><br><br><br>
 				</div>
 			</div>
 		</div>
