--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -7,20 +7,17 @@
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
-  <div class="body" style="text-align: center;">
-		<div class="main col-md-offset-3 col-md-6">
-			<div class="btn-wrapper">
-				<div class="field">
-					<img src="/assets/rogo_top.png" alt="トップロゴ">
-				</div>
-				<div class="field">
-					<p></p>
-				</div>
-				<div class="field">
-					<span><%=link_to "会員の方はこちら", new_user_session_path, class: "btn btn-warning col-xs-5 col-xs-offset-1" %></span>
-					<span><%=link_to "新規登録の方はこちら", new_user_registration_path, class: "btn btn-warning col-xs-5 col-xs-offset-1" %></spam>
-				</div>
+  <body>
+	<div class="row">
+		<div class="btn-wrapper">
+			<div class="main col-md-offset-3 col-md-6">
+				<img src="/assets/rogo_top.png" alt="トップロゴ"><br><br><br><br>
+			</div>
+			<div class="field">
+				<span><%=link_to "会員の方はこちら", new_user_session_path, class: "btn btn-warning col-xs-2 col-xs-offset-3" %></span>
+				<span><%=link_to "新規登録の方はこちら", new_user_registration_path, class: "btn btn-warning col-xs-2 col-xs-offset-3" %></span><br /><br /><br /><br><br><br><br><br>
 			</div>
 		</div>
-  </div>
+	</div>
+  </body>
 </html>
