--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,16 +10,14 @@
   </head>
 
   <body>
-    <header class="navbar navbar-fixed-top navbar-inverse" style="background-color:#593e0d;">
+    <header class="navbar navbar-fixed-top navbar-inverse">
       <div class="container">
 
         <nav class="nav navbar-nav navbar-left">
           <% if user_signed_in? %>
-          <li><%= link_to '', posts_path %>
-            <img src="/assets/rogo_header.png" alt="ヘッダーロゴ"></li>
+          <li><%= link_to image_tag("/assets/rogo_header2_2.png"), users_path(current_user) %></li>
           <% else %>
-          <li><%= link_to '', root_path %>
-            <img src="/assets/rogo_header.png" alt="ヘッダーロゴ"></li>
+          <li><%= link_to image_tag("/assets/rogo_header2_2.png"), "/" %></li>
           <% end %>
         </nav>
         <nav>
@@ -52,9 +50,7 @@
     <footer>
       <div class="container">
         <div class="row">
-          <div class="col-xs-3 col-xs-offset-9">
-            <p></p>
-          </div>
+            <img src="/assets/rogo_header2_long.png" alt="ライン">
         </div>
       </div>
     </footer>
