--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -2,26 +2,29 @@
 
 　<h2>新規投稿する</h2>
 	<div class="row">
+		<img src="/assets/rogo_header2_long.png" alt="ライン">
+	</div>
+	<div class="row">
 	  	<%= form_for(@post) do |f| %>
 	   	<div class="col-md-6 col-md-offset-3">
 			<div class="field">
 				<%= f.label :タイトル %><br><br>
-				<%= f.text_field :title, class: "col-xs-12 post_title" %>
+				<%= f.text_field :title, class: "col-xs-12 post_title" %><br><br>
 			</div>
 
 			<div class="field">
 				<%= f.label :コメント %><br><br>
-				<%= f.text_area :introduction, class: "col-xs-12 post_introduction" %>
+				<%= f.text_area :introduction, class: "col-xs-12 post_introduction" %><br><br>
 			</div>
 
 			<div class="field">
 				<%= f.label :写真 %><br><br>
-		    	<%= attachment_image_tag @post, :image, fallback: "no-image.png", id: "img_prev" %>
+		    	<%= attachment_image_tag @post, :image, fallback: "no-image.png", id: "img_prev" %><br><br>
 		    	<%= f.attachment_field :image, class: "post_image" %>
 	  		</div>
 
 			<div class="field">
-				<%= f.submit "投稿する", class: "btn btn-primary col-xs-2 col-xs-offset-5" %>
+				<%= f.submit "投稿する", class: "btn btn-warning col-xs-2 col-xs-offset-5" %>
 			</div>
 		</div>
 		<% end %>
