--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,46 +1,57 @@
 <body>
 	<h2>友達を見つける</h2>
-		<div class="row">
-			<h3>あなたのプロフィール</h3>
-			<% if @user == current_user %>
-				<div class="col-xs-3">
-				<%= attachment_image_tag @user, :profile_image, format: 'jpeg', size: "200x200",  class: "pull-left profile-img",fallback: "no-image.png" %></tr>
-				</div>
-				<div class="col-xs-7">
-					<table class="table">
-						<tr>
-							<th>名前</th>
-							<th><%= @user.name %></th>
-						</tr>
+		<div class="container">
+			<div class="row">
+				<img src="/assets/rogo_header2_long.png" alt="ライン">
+			</div>
+			<div class="row">
+				<h3>あなたのプロフィール</h3>
+				<% if @user == current_user %>
+					<div class="col-xs-3">
+					<%= attachment_image_tag @user, :profile_image, format: 'jpeg', size: "200x200",  class: "pull-left profile-img",fallback: "no-image.png" %></tr>
+					</div>
+					<div class="col-xs-7">
+						<table class="table">
+							<tr>
+								<th>名前</th>
+								<th><%= @user.name %></th>
+							</tr>
 
-						<tr>
-							<th>一言</th>
-							<th><%= @user.introduction %></th>
-						</tr>
-						<tr>
-							<th>あなたがフォローしている人</th>
-							<th><%= @user.followings.count %></th>
-						</tr>
-						<tr>
-							<th>あなたをフォローしてくれている人</th>
-							<th><%= @user.followers.count %></th>
-						</tr>
-						<tr>
-							<th><%= link_to ' プロフィール編集', edit_user_path(@user), class: "col-xs-7 btn btn-warning" %></th>
-						</tr>
-
-					</table>
-				</div>
-			<% end %>
+							<tr>
+								<th>一言</th>
+								<th><%= @user.introduction %></th>
+							</tr>
+							<tr>
+								<th>あなたがフォローしている人</th>
+								<th><%= @user.followings.count %>人</th>
+							</tr>
+							<tr>
+								<th>あなたをフォローしてくれている人</th>
+								<th><%= @user.followers.count %>人</th>
+							</tr>
+							<tr>
+								<th><%= link_to ' プロフィール編集', edit_user_path(@user), class: "col-xs-7 btn btn-warning" %></th>
+							</tr>
+						</table>
+					</div>
+				<% end %>
+			</div>
 		</div>
 
-
+<div class="row">
+	<img src="/assets/rogo_header2_long.png" alt="ライン">
+</div>
+<div class="row">
 <h2>ユーザー一覧</h2>
+</div>
 <table class="table">
 	<thead>
 		<tr>
 			<th>　写真</th>
+			<th colspan="3"></th>
 			<th>　名前</th>
+			<th colspan="3"></th>
+			<th colspan="3"></th>
 			<th colspan="3"></th>
 			<th colspan="3"></th>
 		</tr>
@@ -52,23 +63,26 @@
 				<td>
 					<%= attachment_image_tag user, :profile_image, format: 'jpeg', size: "50x50",  class: "pull-left profile-img",fallback: "no-image.png" %>
 				</td>
+				<td colspan="3"></td>
 				<td>
 					<%= user.name %>
 				</td>
+				<td>フォロー：<%= @user.followings.count %>人</td>
+				<td>フォロワー：<%= @user.followers.count %>人</td>
 				<td>
-					<%= link_to "もっと見る", user_path(user), class: "user_#{user.id}", class: "col-xs-4 btn btn-danger" %>
+					<%= link_to "もっと見る", user_path(user), class: "user_#{user.id}", class: "col-xs-7 btn btn-danger" %>
 				</td>
 				<td>
 					<% unless current_user == user %>
 					  <% if current_user.following?(user) %>
 					    <%= form_for(current_user.relationships.find_by(follow_id: user.id), html: { method: :delete }) do |f| %>
 					      <%= hidden_field_tag :follow_id, user.id %>
-					      <%= f.submit 'フォローを外す', class: 'col-xs-3 btn btn-danger btn-block' %>
+					      <%= f.submit 'フォローを外す', class: 'col-xs-7 btn btn-danger' %>
 					    <% end %>
 					  <% else %>
 					    <%= form_for(current_user.relationships.build) do |f| %>
 					      <%= hidden_field_tag :follow_id, user.id %>
-					      <%= f.submit 'フォローする', class: 'col-xs-4 btn btn-warning' %>
+					      <%= f.submit 'フォローする', class: 'col-xs-7 btn btn-warning' %>
 					    <% end %>
 					  <% end %>
 					<% end %>
@@ -79,5 +93,3 @@
 </table>
 </div>
 </body>
-<!--users一覧 -->
-
