--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -11,7 +11,7 @@
 	<div class="row">
 		<div class="btn-wrapper">
 			<div class="main col-md-offset-3 col-md-6">
-				<%= image_tag "rogo_top.png", alt: "top_logo", id: "assets", class: "image", width: "80px" %><br><br><br><br>
+				<%= image_tag "rogo_top.png", alt: "top_logo", id: "assets", class: "image" %><br><br><br><br>
 			</div>
 			<div class="field">
 				<span><%=link_to "会員の方はこちら", new_user_session_path, class: "btn btn-warning col-xs-2 col-xs-offset-3" %></span>
