--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,6 +1,6 @@
 <div class="body" style="text-align: center;">
 	<div class="row">
-	<h3><img src="/assets/rogo_header2.png" alt="ヘッダーロゴ">とは</h3><br><br><br><br>
+	<h3><%= image_tag "rogo_header2.png", alt: "header_logo2", id: "assets", class: "image" %>とは</h3><br><br><br><br>
 	<p>このサイトはハンドメイド好きがハンドメイド作品を自慢したり<br>他の人の作品を見に行ったりすることが出来るサイトです。</p><br><br><br><br>
 	<h4>さぁ、素敵な作品を探しに行きましょう！</h4>
 	</div>
