--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -14,7 +14,7 @@
 	<div class="row">
 		<h2>投稿編集</h2>
 		<div class="row">
-			<img src="/assets/rogo_header2_long.png" alt="ライン">
+			<%= image_tag "rogo_header2_long.png", alt: "line", id: "assets", class: "image" %>
 		</div>
 		<%= form_for(@post) do |f| %>
 		<div class="col-md-6 col-md-offset-3">
@@ -42,7 +42,7 @@
 		<% end %>
 	</div>
 		<div class="row">
-			<img src="/assets/rogo_header2_long.png" alt="ライン">
+			<%= image_tag "rogo_header2_long.png", alt: "line", id: "assets", class: "image" %>
 		</div>
 
 		<div class="row">
