--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -12,7 +12,7 @@
 		<div class="row">
 			<h2>みんなの投稿</h2>
 			<div class="row">
-				<img src="/assets/rogo_header2_long.png" alt="ライン">
+				<%= image_tag "rogo_header2_long.png", alt: "line", id: "assets", class: "image" %>
 			</div>
 
 			<h3>注目の投稿</h3>
@@ -29,7 +29,7 @@
 					<% end %>
 			</table>
 			<div class="row">
-				<img src="/assets/rogo_header2_long.png" alt="ライン">
+				<%= image_tag "rogo_header2_long.png", alt: "line", id: "assets", class: "image" %>
 			</div>
 
 			<table class="table table-hover table-inverse">
