--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,8 +1,8 @@
-<body  style="text-align: center;">
+<body>
 
 　<h2>新規投稿する</h2>
 	<div class="row">
-		<img src="/assets/rogo_header2_long.png" alt="ライン">
+		<%= image_tag "rogo_header2_long.png", alt: "line", id: "assets", class: "image" %>
 	</div>
 	<div class="row">
 	  	<%= form_for(@post) do |f| %>
