--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,7 +2,7 @@
 	<h2>友達を見つける</h2>
 		<div class="container">
 			<div class="row">
-				<img src="/assets/rogo_header2_long.png" alt="ライン">
+				<%= image_tag "rogo_header2_long.png", alt: "line", id: "assets", class: "image" %>
 			</div>
 			<div class="row">
 				<h3>あなたのプロフィール</h3>
@@ -39,7 +39,7 @@
 		</div>
 
 <div class="row">
-	<img src="/assets/rogo_header2_long.png" alt="ライン">
+	<%=image_tag "rogo_header2_long.png", alt: "line", id: "assets", class: "image" %>
 </div>
 <div class="row">
 <h2>ユーザー一覧</h2>
