--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,7 +1,7 @@
 <body>
 <h2>ユーザー編集</h2>
 	<div class="row">
-		<img src="/assets/rogo_header2_long.png" alt="ライン">
+		<%= image_tag "rogo_header2_long.png", alt: "line", id: "assets", class: "image" %>
 	</div>
 	<%= form_for(@user) do |f| %>
 		<!-- エラーメッセージ表示-->
