--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -34,7 +34,7 @@
   </div>
 
   <div class="row">
-      <img src="/assets/rogo_header2_long.png" alt="ライン">
+      <%= image_tag "rogo_header2_long.png", alt: "line", id: "assets", class: "image" %>
     </div>
 
   <div class="row">
