--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -43,7 +43,7 @@
 		</div>
 	<% end %>
 	<div class="row">
-		<img src="/assets/rogo_header2_long.png" alt="ライン">
+		<%= image_tag "rogo_header2_long.png", alt: "line", id: "assets", class: "image" %>
 	</div>
 		<% @posts.each do |post| %>
 			<div class="col-md-3">
