--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,9 +15,9 @@
 
         <nav class="nav navbar-nav navbar-left">
           <% if user_signed_in? %>
-          <li><%= link_to image_tag "rogo_header2.png", alt: "header_logo2", id: "assets", class: "image", users_path(current_user) %></li>
+          <li><%= link_to image_tag ("/assets/images/rogo_header2.png", alt: "header_logo2"), users_path(current_user) %></li>
           <% else %>
-          <li><%= link_to image_tag "rogo_header2.png", alt: "header_logo2", id: "assets", class: "image", "/" %></li>
+          <li><%= link_to image_tag ("/assets/images/rogo_header2.png", alt: "header_logo2"), "/" %></li>
           <% end %>
         </nav>
         <nav>
