--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,12 +16,12 @@
         <nav class="nav navbar-nav navbar-left">
           <% if user_signed_in? %>
           <li><%= link_to users_path(current_user) do  %>
-                <%= image_tag("rogo_header2.png", alt: "header_logo2") %>
+                <%= image_tag("rogo_header2_2.png", alt: "header_logo2") %>
               <% end %>
           </li>
           <% else %>
           <li><%= link_to root_path do  %>
-                <%= image_tag("rogo_header2.png", alt: "header_logo2") %>
+                <%= image_tag("rogo_header2_2.png", alt: "header_logo2") %>
                 <% end %>
           </li>
           <% end %>
